frontend/src/components/Navigation/navigation.scss
@use "../../sassStyles/theme";
@use "../../sassStyles/variables";

$hoverHighlight: rgb(58, 56, 56);

.nav {
  height: variables.$navigationBarHeight;
  background: theme.$darkBackground;
  display: flex;
  font-weight: 600;
  padding: 0px 20px;

  button {
    font-weight: 600;
  }

  a {
    color: white;
    text-decoration: none;
  }

  ul {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 20px;
    margin: 0;
    padding: 0;
  }

  li {
    list-style: none;
  }

  &__title {
    margin: 0;
    text-transform: uppercase;
    font-weight: 600;
    color: rgb(212, 214, 214);
    font-family: theme.$titleFontFamily;
  }
}

.menuItem {
  font-size: 17px;
  padding: 10px;
  border-radius: 20px;
  display: flex;
  gap: 10px;
  font-weight: 700;
  &:hover {
    background: $hoverHighlight;
  }
  button: {
    background: red;
  }
}

.menu__logout {
  all: unset;
  margin-top: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgb(36, 35, 35);
  border-radius: 10px;
  padding: 6px;
  font-weight: 400;

  &:hover {
    background: $hoverHighlight;
    cursor: pointer;
  }

  .logout__icon {
    font-size: 25px;
    margin-right: 10px;
  }
}

.menu__items {
  position: relative;
  z-index: 10;
  box-sizing: border-box;
  padding: 20px;
  background: rgb(41, 40, 40);
  border-radius: 10px;
  position: absolute;
  top: 80px;
  right: 20px;
  height: 300px;
  width: 200px;
  display: flex;
  gap: 10px;
  flex-direction: column;
}

.menuButton {
  all: unset;
}

.burger {
  display: flex;
  flex-direction: column;
  gap: 6px;
  cursor: pointer;

  div {
    width: 30px;
    height: 5px;
    border-radius: 3px;
    background: whitesmoke;
  }

  &:hover div {
    background: theme.$secondaryGrey;
  }
}

